--- a/package.json
+++ b/package.json
@@ -14,12 +14,27 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
     "gatsby": "^3.13.0",
+    "gatsby-plugin-create-client-paths": "^3.13.0",
+    "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-filesystem": "^3.13.0",
+    "gatsby-source-tmdb": "^2.0.3",
+    "gatsby-transformer-sharp": "^3.13.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "^17.0.1",
+    "react-modal-video": "^1.2.8",
+    "swiper": "^6.8.2"
   },
   "devDependencies": {
-    "prettier": "2.3.2"
+    "autoprefixer": "^10.3.4",
+    "gatsby-plugin-postcss": "^4.13.0",
+    "postcss": "^8.3.6",
+    "prettier": "2.3.2",
+    "tailwindcss": "^2.2.9"
   },
   "repository": {
     "type": "git",
