--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@headlessui/react": "^1.4.1",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "gatsby": "^3.13.0",
+    "gatsby-plugin-anchor-links": "^1.2.1",
     "gatsby-plugin-create-client-paths": "^3.13.0",
     "gatsby-plugin-image": "^1.13.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-source-tmdb": "^2.0.3",
